--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -59,17 +59,19 @@
 
     @media screen and (max-width: 770px) {
       .day {
-        height: 670px;
         background-image: url('https://images.unsplash.com/photo-1566422028746-e69f5004a099?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=701&q=80');
         margin: -3%;
+        background-size: 100% 100%;
+        height: 740px;
       }
 
       .night {
-        height: 670px;
         background-image: url('https://images.unsplash.com/photo-1575587002595-3c931e8267a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80');
         margin: -3%;
         background-position-x: 0;
         background-position-y: 0;
+        background-size: 100% 100%;
+        height: 740px;
       }
     }
   </style>
